--- a/foundry.toml
+++ b/foundry.toml
@@ -1,6 +1,14 @@
 [profile.default]
+solc_version = "0.8.23"
 src = "src"
 out = "out"
 libs = ["lib"]
+
+
+[fmt]
+bracket_spacing = true
+line_length = 100
+multiline_func_header = "all"
+number_underscore="thousands"
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
