--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "micro msa",
+  "name": "micro-msa",
   "description": "super mini modular smart account",
   "license": "MIT",
   "version": "0.3.1",
