fix: tracking foundry files in package.json

--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   },
   "files": [
     "artifacts",
+    "foundry.toml",
+    "remappings.txt",
     "src",
     "test/utils",
     "CHANGELOG.md",
