chore: update toml and ci

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,8 +2,10 @@ name: test
 
 on:
   workflow_dispatch:
+  push:
+    branches:
+      - "main"
   pull_request:
-    types: [opened, reopened]
 
 env:
   FOUNDRY_PROFILE: ci
@@ -24,6 +26,28 @@ jobs:
         uses: foundry-rs/foundry-toolchain@v1
         with:
           version: nightly
+
+      - name: "Install NodeJS"
+        uses: actions/setup-node@v3
+        with:
+          node-version: 20
+
+      - uses: pnpm/action-setup@v3
+        name: Install pnpm
+        with:
+          version: 8.15
+          run_install: false
+
+      - name: "Restore the cached build and the node modules"
+        if: ${{ inputs.restore-cache }}
+        uses: "actions/cache/restore@v3"
+        with:
+          fail-on-cache-miss: true
+          key: "build-and-modules-${{ github.sha }}"
+          path: ${{ inputs.cache-path }}
+
+      - name: "Install the Node.js dependencies"
+        run: "pnpm install"
 
       - name: Run Forge build
         run: |
