--- a/package.json
+++ b/package.json
@@ -1,47 +1,12 @@
 {
   "name": "erc7579-implementation",
-  "description": "sReference implementation for ERC-7579",
+  "description": "Reference implementation for ERC-7579",
   "license": "MIT",
   "version": "0.3.1",
   "author": {
     "name": "ERC-7579",
     "url": "https://erc7579.com/"
   },
-  "bugs": {
-    "url": "https://github.com/erc7579/erc7579-implementation/issues"
-  },
-  "dependencies": {
-    "@openzeppelin/contracts": "5.0.1",
-    "account-abstraction": "github:eth-infinitism/account-abstraction#develop",
-    "ds-test": "github:dapphub/ds-test",
-    "forge-std": "github:foundry-rs/forge-std",
-    "prettier": "^2.8.8",
-    "sentinellist": "github:rhinestonewtf/sentinellist",
-    "solady": "github:vectorized/solady",
-    "solhint": "^4.1.1"
-  },
-  "files": [
-    "artifacts",
-    "foundry.toml",
-    "remappings.txt",
-    "src",
-    "test/utils",
-    "CHANGELOG.md",
-    "LICENSE-GPL.md"
-  ],
-  "homepage": "https://github.com/erc7579/erc7579-implementation/#readme",
-  "keywords": [
-    "blockchain",
-    "ethereum",
-    "foundry",
-    "smart-contracts",
-    "solidity",
-    "web3"
-  ],
-  "publishConfig": {
-    "access": "public"
-  },
-  "repository": "github.com/erc7579/erc7579-implementation",
   "scripts": {
     "build": "forge build",
     "build:optimized": "FOUNDRY_PROFILE=optimized forge build",
@@ -50,13 +15,43 @@
     "gas:report": "forge test --gas-report --mp \"./test/integration/**/*.sol\" --nmt \"test(Fuzz)?_RevertWhen_\\w{1,}?\"",
     "gas:snapshot": "forge snapshot --mp \"./test/integration/**/*.sol\" --nmt \"test(Fuzz)?_RevertWhen_\\w{1,}?\"",
     "gas:snapshot:optimized": "pnpm run build:optimized && FOUNDRY_PROFILE=test-optimized forge snapshot --mp \"./test/integration/**/*.sol\" --nmt \"test(Fork)?(Fuzz)?_RevertWhen_\\w{1,}?\"",
-    "lint": "pnpm run lint:sol && bun run prettier:check",
     "lint:sol": "forge fmt --check && pnpm solhint \"{script,src,test}/**/*.sol\"",
     "prepack": "pnpm install",
-    "prettier:check": "prettier --check \"**/*.{json,md,svg,yml}\"",
-    "prettier:write": "prettier --write \"**/*.{json,md,svg,yml}\"",
     "test": "forge test",
     "test:lite": "FOUNDRY_PROFILE=lite forge test",
     "test:optimized": "pnpm run build:optimized && FOUNDRY_PROFILE=test-optimized forge test"
+  },
+  "dependencies": {
+    "@rhinestone/sentinellist": "github:rhinestonewtf/sentinellist",
+    "account-abstraction": "github:eth-infinitism/account-abstraction#develop",
+    "ds-test": "github:dapphub/ds-test",
+    "forge-std": "github:foundry-rs/forge-std",
+    "solady": "github:vectorized/solady"
+  },
+  "devDependencies": {
+    "solhint": "^5.0.1"
+  },
+  "files": [
+    "src",
+    "foundry.toml",
+    "remappings.txt"
+  ],
+  "homepage": "https://github.com/erc7579/erc7579-implementation#readme",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/erc7579/erc7579-implementation.git"
+  },
+  "bugs": {
+    "url": "https://github.com/erc7579/erc7579-implementation/issues"
+  },
+  "keywords": [
+    "account abstraction",
+    "modular smart account",
+    "ERC",
+    "standard",
+    "reference implementation"
+  ],
+  "publishConfig": {
+    "access": "public"
   }
 }
