chore: update pkg and deploys [no ci]

--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   "homepage": "https://github.com/erc7579/erc7579-implementation#readme",
   "repository": {
     "type": "git",
-    "url": "https://github.com/erc7579/erc7579-implementation.git"
+    "url": "git+https://github.com/erc7579/erc7579-implementation.git"
   },
   "bugs": {
     "url": "https://github.com/erc7579/erc7579-implementation/issues"
